add linux option